--- a/Angular_ASPNETCore_CustomersService.csproj
+++ b/Angular_ASPNETCore_CustomersService.csproj
@@ -19,4 +19,8 @@
     <Content Remove="Client\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Customers.sqlite" />
+  </ItemGroup>
+
 </Project>
